--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,11 +8,11 @@
     <string name="back">Back</string>
     <string name="copyright">Copyright @2019</string>
     <string-array name="rates">
-        <item>0</item>
         <item>1</item>
         <item>2</item>
         <item>3</item>
         <item>4</item>
         <item>5</item>
     </string-array>
+    <string name="title_activity_maps">Map</string>
 </resources>
